--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,25 +23,27 @@ dependencies:
   url_launcher: 5.4.2
   transparent_image: 1.0.0
   injector: 1.0.8
+  pie_chart: 3.1.1
+  flutter_slidable: 0.5.4
+  fluttertoast: 4.0.1
+  wakelock: 0.1.4+1
+  flutter_html: 1.0.2
+  uni_links: ^0.4.0
+  native_mixpanel: ^0.1.2
+  srt_parser: ^1.1.0+5
+  firebase_core: ^0.5.0
+  firebase_crashlytics: ^0.2.0
+  firebase_analytics: ^6.0.0
+  flushbar: ^1.10.4
+  cached_network_image: ^2.3.1
+
+dependency_overrides:
   video_player:
     git:
       url: https://github.com/MedSchoolCoach/plugins.git
       path: packages/video_player
       ref: always-speed
-  pie_chart: 3.1.1
-  flutter_slidable: 0.5.4
-  fluttertoast: 4.0.1
-  wakelock: 0.1.4+1
-  flutter_html: ^0.11.1
-  uni_links: ^0.4.0
-  native_mixpanel: ^0.1.2
-  srt_parser: ^1.1.0+5
-  firebase_core: ^0.5.0
-  firebase_crashlytics: ^0.1.4+1
-  firebase_analytics: ^6.0.0
-  flushbar: ^1.10.4
-  cached_network_image: ^2.3.1
-
+  csslib: ^0.16.2
 
 dev_dependencies:
   build_runner: 1.7.3
