--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,8 @@ dependencies:
   native_mixpanel: ^0.1.2
   srt_parser: ^1.1.0+5
   firebase_core: ^0.5.0
-  firebase_crashlytics: ^0.2.0
-  firebase_analytics: ^6.0.0
+  firebase_crashlytics: ^0.1.4+1
+  firebase_analytics: ^6.0.1
   flushbar: ^1.10.4
   cached_network_image: ^2.3.1
 
