--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_analytics: ^6.0.1
   flushbar: ^1.10.4
   cached_network_image: ^2.3.1
+  carousel_slider: ^2.3.1
 
 dependency_overrides:
   video_player:
