--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_slidable: 0.5.4
   fluttertoast: 4.0.1
   wakelock: 0.1.4+1
+  webview_flutter: 1.0.7
   flutter_html: 1.0.2
   uni_links: ^0.4.0
   native_mixpanel: ^0.1.2
