--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,8 @@ dependencies:
   pie_chart: 3.1.1
   flutter_slidable: 0.5.4
   fluttertoast: 4.0.1
-  wakelock: 0.1.4+1
-  webview_flutter: 1.0.7
+  wakelock: 0.1.4+2
+  webview_flutter: 0.3.24
   flutter_html: 1.0.2
   uni_links: ^0.4.0
   native_mixpanel: ^0.1.2
@@ -38,6 +38,7 @@ dependencies:
   flushbar: ^1.10.4
   cached_network_image: ^2.3.1
   carousel_slider: ^2.3.1
+  chewie: 0.9.10
 
 dependency_overrides:
   video_player:
