--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   flutter_svg: 0.18.0
   flutter_i18n: 0.8.3
   flutter_secure_storage: 3.3.3
-  firebase_performance: 0.3.2
+  firebase_performance:
   url_launcher: 5.4.2
   transparent_image: 1.0.0
   injector: 1.0.8
@@ -27,19 +27,19 @@ dependencies:
   flutter_slidable: 0.5.4
   fluttertoast: 4.0.1
   wakelock: 0.1.4+2
-  webview_flutter: 0.3.24
-  flutter_html: 1.0.2
+  webview_flutter:
+  flutter_html:
   uni_links: ^0.4.0
-  native_mixpanel: ^0.1.2
+  native_mixpanel:
   srt_parser: ^1.1.0+5
-  firebase_core: ^0.5.0
-  firebase_crashlytics: ^0.1.4+1
-  firebase_analytics: ^6.0.1
+  firebase_core:
+  firebase_crashlytics:
+  firebase_analytics:
   flushbar: ^1.10.4
-  cached_network_image: ^2.3.1
+  cached_network_image:
   carousel_slider: ^2.3.1
   chewie: 0.9.10
-  flutter_appauth: ^0.9.2+6
+  flutter_appauth:
   auto_size_text: ^2.1.0
   syncfusion_flutter_datepicker:
   vector_math: ^2.0.8
