--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   transparent_image: 1.0.0
   injector: 1.0.8
   pie_chart: 3.1.1
+  flutter_animation_progress_bar : ^1.0.6
   flutter_slidable: 0.5.4
   fluttertoast: 4.0.1
   wakelock: 0.1.4+2
