--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   animated_size_and_fade: ^1.1.4
   yaml: 2.2.1
   json_annotation: 3.0.1
+  enum_to_string : ^1.0.14
   intl: 0.16.1
   http: 0.12.0+4
   cupertino_icons: 0.1.3
