--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   json_annotation: 3.0.1
   enum_to_string : ^1.0.14
   intl: 0.16.1
+  ndialog: ^3.3.1
+  data_connection_checker: ^0.3.4 
   http: 0.12.0+4
   cupertino_icons: 0.1.3
   flutter_svg: 0.18.0
@@ -29,16 +31,17 @@ dependencies:
   pie_chart: 3.1.1
   flutter_animation_progress_bar : ^1.0.6
   flutter_slidable: 0.5.4
-  fluttertoast: 4.0.1
+  fluttertoast: ^7.1.8
   wakelock: 0.1.4+2
   webview_flutter:
   flutter_html:
   uni_links: ^0.4.0
-  native_mixpanel:
+  mixpanel_flutter: ^1.0.1
   srt_parser: ^1.1.0+5
   firebase_core:
   firebase_crashlytics:
   firebase_analytics:
+  firebase_messaging: "^8.0.0-dev.15"
   flushbar: ^1.10.4
   cached_network_image:
   carousel_slider: ^2.3.1
