--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -35,6 +35,8 @@
 	<string>MCAT Prep by MedSchoolCoach</string>
 	<key>FirebaseAppDelegateProxyEnabled</key>
 	<false/>
+	<key>flutter_apns.disable_firebase_core</key>
+    <false/>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
