--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,10 @@ dependencies:
   cupertino_icons: 0.1.3
   flutter_svg: 0.18.0
   flutter_i18n: 0.8.3
+  flutter_apns : 1.4.1
   flutter_secure_storage: 3.3.3
   firebase_performance:
+  firebase_messaging: ^7.0.0
   url_launcher: 5.4.2
   transparent_image: 1.0.0
   injector: 1.0.8
@@ -41,7 +43,6 @@ dependencies:
   firebase_core:
   firebase_crashlytics:
   firebase_analytics:
-  firebase_messaging: "^8.0.0-dev.15"
   flushbar: ^1.10.4
   cached_network_image:
   carousel_slider: ^2.3.1
