--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,11 @@ dependencies:
   flutter_slidable: ^0.6.0
   fluttertoast: ^8.0.7
   wakelock: ^0.4.0
+  localstorage: ^4.0.0+1
   webview_flutter:
   flutter_html:
   uni_links: ^0.5.1
   universal_io: ^2.0.4
-  mixpanel_flutter:
-    git: https://github.com/john-fk/mixpanel-flutter
   srt_parser: ^1.1.0+5
   firebase_core:
   firebase_crashlytics:
@@ -60,7 +59,6 @@ dependencies:
   flutter_local_notifications:
   crypto: ^3.0.0
   rxdart: ^0.27.0
-  device_preview: ^0.7.1
 
 dependency_overrides:
   video_player:
